@@ -254,9 +254,8 @@ require_once('include/classes/ctree.inc.php');
 		global	$ZBX_CURRENT_NODEID, $ZBX_CURRENT_SUBNODES, $ZBX_WITH_SUBNODES;
 
 		if ( !isset($ZBX_CURRENT_NODEID) )	init_nodes();
-
 		$result = ( is_show_subnodes($forse_with_subnodes) ? $ZBX_CURRENT_SUBNODES : $ZBX_CURRENT_NODEID );
-
+		
 		if ( !is_null($perm) )
 		{
 			global $USER_DETAILS;
